tests/lean/refineFiltersOldMVars.lean.expected.out
refineFiltersOldMVars.lean:34:18-36:11: error: unsolved goals
case a
⊢ True
refineFiltersOldMVars.lean:44:17-46:18: error: unsolved goals
case b
h : Type
⊢ ?a

case a
⊢ Type
refineFiltersOldMVars.lean:66:4-66:11: error: no goals to be solved
refineFiltersOldMVars.lean:101:2-101:3: error: unsolved goals
case d
⊢ Bool
refineFiltersOldMVars.lean:102:2-102:3: error: unsolved goals
case e
⊢ Nat
refineFiltersOldMVars.lean:109:2-109:3: error: unsolved goals
case e
⊢ Bool
